--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 aiohttp==3.7.4.post0
 discord.py==1.7.3
-DateTime==4.3
 Flask==2.0.1
-ffmpeg-python==0.1.4
 httpx==0.21.1
-PyNaCl==1.4.0
+nacl==0.0.0
 requests==2.26.0
 youtube_dl==2021.6.6
