--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ aiohttp==3.7.4.post0
 discord.py==1.7.3
 Flask==2.0.1
 httpx==0.21.1
-PyNaCl=1.5.0
+PyNaCl==1.5.0
 requests==2.26.0
 youtube_dl==2021.12.17
